home-ingress/assistant/endpoint.yaml
# Based on: https://medium.com/@ManagedKube/kubernetes-access-external-services-e4fd643e5097
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "assistant"
subsets:
  - addresses:
      - ip: "10.0.2.3"
    ports:
      - name: "assistant"
        port: 8123
