home-ingress/assistant/svc.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "assistant"
spec:
  ports:
    - name: "assistant"
      protocol: "TCP"
      port: 8123
